styles/punchcard-stack.less
.punchcard-stack .business-name {
  position: absolute;
  top: 39px;
  width: 100%;
  text-align: center;
  font-size: 24px;
  font-weight: normal;
}

.punchcard-stack .num-rewards-badge {
  position: absolute;
  right: 57px;
  top: 85px;
}

.punchcard-stack .banner-elite,
.punchcard-stack .banner-regular {
  position: absolute;
  top: 41px;
  left: 43px;
}

.punchcard-stack .description {
  position: absolute;
  top: 100px;
  left: 163px;
  width: 330px;
  text-align: center;
}

.punchcard-stack .description > .requirement {
  display: block;
  color: #00B3E7;
  font-size: 18px;
  font-weight: 500;
}

.punchcard-stack .description > .reward {
  font-size: 18px;
  font-weight: 500;
  font-style: italic;
  display: block;
  margin-top: 4px;
}

.punchcard-stack .punch-seal-indicators {
  position: absolute;
  top: 156px;
  left: 123px;
  width: 434px;
}

